import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
plugins {
    id'java'
    id'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

tasks.compileJava {
    sourceCompatibility = "${JavaVersion.VERSION_1_8}"
}


group'net.deechael'
version'1.00.7'

repositories {
    mavenCentral()
    maven { name "Minecraft" ; url "https://libraries.minecraft.net/" }
}
shadowJar {
    archiveBaseName.set(project.name+"-"+project.version)
    archiveClassifier.set('shadowJar')
}

publishing {
    publications {
        shadow(MavenPublication) { publication ->
            project.shadow.component(publication)
        }
    }

    repositories {
        mavenLocal()
    }
}

tasks.named('shadowJar', ShadowJar) {
    enableRelocation true
    relocationPrefix "dodojava"
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.10.0' // WebSocket
    implementation 'com.google.code.gson:gson:2.9.0' // Json
    implementation 'org.slf4j:slf4j-api:2.0.9' // Logging
    implementation 'org.yaml:snakeyaml:1.30' // Configuration
    implementation 'commons-lang:commons-lang:2.6' // Utils
    implementation 'com.google.guava:guava:31.1-jre' // Utils
    implementation 'net.deechael:Useless:1.02.0' // Utils
    implementation 'com.mojang:brigadier:1.0.18'

    //Lombok
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
}

test {
    useJUnitPlatform()
}